# parking_cecar_webcam_capture_v1

./: .gitignore  Readme.md  pyproject.toml  python-version.ini
core/: main.py
live_cam_car_detector/: .doit.db.dir  app_rstp.py  dodo.py  exec.py  exec_gradio.py  exec_gradio_int.py  rstp_capture_test.py  rstp_test.py  virtual_cam.py
live_cam_car_detector/core/: app.py  constants.py  detection_api.py  gradio_detect_wrappers.py  http_post_client.py  main.py  utils.py  vehicle_video_stream_detector.py
live_cam_car_detector/flagged/: log.csv
live_cam_car_detector/gradio_interface/: app.py  app_int.py  frame_detection_utils.py
